fixed wallet names style on mobile

--- a/src/UI/stylesheets/base/_base.scss
+++ b/src/UI/stylesheets/base/_base.scss
@@ -67,8 +67,14 @@ a {
   height: 100%;
   width: 100%;
   svg {
-      height: 100%;
-      width: 100%;
+    height: 100%;
+    width: 100%;
+  }
+}
+[role='dialog'] {
+  h2 {
+    white-space: nowrap;
+    word-wrap: initial;
   }
 }
 
